--- a/src/app/components/facture-card/facture-card.component.css
+++ b/src/app/components/facture-card/facture-card.component.css
@@ -1,15 +1,6 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: roboto, sans-serif;
   background: white;
-}
-
-.material-icons {
-  cursor: pointer;
 }
 
 .invoice-body {
@@ -55,6 +46,7 @@ table {
   table-layout: auto;
   width: 100%;
 }
+
 table, th, td {
   border-collapse: collapse;
 }
@@ -89,7 +81,7 @@ td {
 }
 
 input[type=number] {
-  text-align: center ;
+  text-align: center;
   max-width: 50px;
   font-size: 15px;
   padding: 10px;
@@ -109,14 +101,14 @@ input[type=text] {
 input[type=text]:focus {
   border-radius: 5px;
   background: #ffffff;
-  box-shadow:  11px 11px 22px #d9d9d9,
+  box-shadow: 11px 11px 22px #d9d9d9,
   -11px -11px 22px #ffffff;
 }
 
 input[type=number]:focus {
   border-radius: 5px;
   background: #ffffff;
-  box-shadow:  11px 11px 22px #d9d9d9,
+  box-shadow: 11px 11px 22px #d9d9d9,
   -11px -11px 22px #ffffff;
 }
 
@@ -125,37 +117,37 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
 }
 
-.float{
-  width:40px;
-  height:40px;
-  background-color:#FF1D89;
-  color:#FFF;
-  border-radius:100%;
-  text-align:center;
-  box-shadow:
-    0 2.8px 2.2px rgba(0, 0, 0, 0.048),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.069),
-    0 12.5px 10px rgba(0, 0, 0, 0.085),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.101),
-    0 41.8px 33.4px rgba(0, 0, 0, 0.122),
-    0 100px 80px rgba(0, 0, 0, 0.17);
+.float {
+  width: 40px;
+  height: 40px;
+  background-color: #FF1D89;
+  color: #FFF;
+  border-radius: 100%;
+  text-align: center;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.048),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.069),
+  0 12.5px 10px rgba(0, 0, 0, 0.085),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.101),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.122),
+  0 100px 80px rgba(0, 0, 0, 0.17);
 }
 
 .float:hover {
-  background-color:#ff057e;
+  background-color: #ff057e;
 }
 
-.plus{
-  margin-top:10px;
+.plus {
+  margin-top: 10px;
 }
 
 #sum {
-  text-align: right;
+  /*text-align: right;*/
   width: 100%;
 }
 
@@ -172,6 +164,7 @@ input[type=number] {
   body {
     background: lemonchiffon;
   }
+
   .invoice-container {
     border: solid 1px gray;
     width: 100%;
@@ -179,21 +172,22 @@ input[type=number] {
     padding: 40px 40px 100px;
     border-radius: 5px;
     background: white;
-    box-shadow:
-      0 2.8px 2.2px rgba(0, 0, 0, 0.02),
-      0 6.7px 5.3px rgba(0, 0, 0, 0.028),
-      0 12.5px 10px rgba(0, 0, 0, 0.035),
-      0 22.3px 17.9px rgba(0, 0, 0, 0.042),
-      0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-      0 100px 80px rgba(0, 0, 0, 0.07);
+    box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    0 12.5px 10px rgba(0, 0, 0, 0.035),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    0 100px 80px rgba(0, 0, 0, 0.07);
   }
 
   .title-date {
     width: 20%;
   }
+
   .invoice-number {
     width: 20%;
   }
+
   .space {
     width: 80%;
   }
