--- a/src/app/components/facture-card/facture-card.component.html
+++ b/src/app/components/facture-card/facture-card.component.html
@@ -35,7 +35,7 @@
     <div id="sum">
       <input
         type="text"
-        [placeholder]="facture.montant.toFixed(4)"
+        placeholder="{{ facture.montant.toFixed(4) }} TND"
         name="total"
         class="total"
         id="total"
