--- a/src/app/components/dialogs/send-email-dialog/send-email-dialog.component.html
+++ b/src/app/components/dialogs/send-email-dialog/send-email-dialog.component.html
@@ -1,50 +1,101 @@
 <div class="fixed inset-0">
-  <div class="absolute inset-0 bg-black opacity-50" (click)="closeDialog()"></div>
-  <div
-    class="max-w-screen-md mx-auto p-5 fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white z-50">
-    <div class="text-center mb-16">
-      <p class="mt-4 text-sm leading-7 text-gray-500 font-regular uppercase">
-        Contacter Client
-      </p>
-    </div>
+	<div
+		class="absolute inset-0 bg-black opacity-50"
+		(click)="closeDialog()"
+	></div>
+	<div
+		class="w-[1000px] mx-auto p-5 fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white z-50"
+	>
+		<div class="text-center mb-16">
+			<p class="mt-4 text-sm leading-7 text-gray-500 font-regular uppercase">
+				Contacter Client
+			</p>
+		</div>
 
-    <form class="w-full">
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full px-3">
-          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
-            Email Address
-          </label>
-          <input
-            disabled
-            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-4 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-            id="grid-email"
-            type="email"
-            placeholder="********@*****.**"
-            [value]="facture.client.email"
-          >
-        </div>
-      </div>
+		<form [formGroup]="sendEmailForm" class="w-full" (ngSubmit)="onSubmit()">
+			<div class="flex flex-wrap -mx-3 mb-6">
+				<div class="w-full px-3">
+					<label
+						class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+					>
+						Email Address
+					</label>
+					<input
+						disabled
+						class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-4 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+						id="grid-email"
+						type="email"
+						placeholder="********@*****.**"
+						[value]="facture.client.email"
+					/>
+				</div>
+			</div>
 
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full px-3">
-          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
-            Votre Message
-          </label>
-          <textarea rows="10"
-                    class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
+			<div class="flex flex-wrap -mx-3 mb-6">
+				<div class="w-full px-3">
+					<label
+						class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+					>
+						Sujet
+					</label>
+					<input
+						class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-4 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+						formControlName="subject"
+					/>
+					<div
+						*ngIf="
+							sendEmailForm.get('subject')!.invalid &&
+							(sendEmailForm.get('subject')!.dirty ||
+								sendEmailForm.get('subject')!.touched)
+						"
+						class="text-red-500 mt-1"
+					>
+						<span *ngIf="sendEmailForm.get('subject')?.hasError('required')"
+							>Subject is required.</span
+						>
+					</div>
+				</div>
+			</div>
 
-      </textarea>
-        </div>
-        <div class="flex justify-between w-full px-3">
-          <button
-            class="shadow bg-primary hover:bg-primary/60 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
-            type="submit"
-            (click)="closeDialog()"
-          >
-            Send Message
-          </button>
-        </div>
-      </div>
-    </form>
-  </div>
+			<div class="flex flex-wrap -mx-3 mb-6">
+				<div class="w-full px-3">
+					<label
+						class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+					>
+						Votre Message
+					</label>
+					<textarea
+						rows="10"
+						class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+						formControlName="msgBody"
+					></textarea>
+					<div
+						*ngIf="
+							sendEmailForm.get('msgBody')!.invalid &&
+							(sendEmailForm.get('msgBody')!.dirty ||
+								sendEmailForm.get('msgBody')!.touched)
+						"
+						class="text-red-500 mt-1"
+					>
+						<span *ngIf="sendEmailForm.get('msgBody')?.hasError('required')"
+							>Message is required.</span
+						>
+					</div>
+				</div>
+			</div>
+
+			<div class="flex justify-between w-full px-3">
+				<button
+					class="shadow bg-primary hover:bg-primary/60 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-6 rounded"
+					type="submit"
+				>
+					Send Message
+				</button>
+			</div>
+		</form>
+
+		<div *ngIf="emailSentSuccessfully$ | async as successMessage" class="text-green-500 mt-4">
+			{{ successMessage }}
+		</div>
+	</div>
 </div>
