--- a/src/app/components/facture-card/facture-card.component.html
+++ b/src/app/components/facture-card/facture-card.component.html
@@ -1,54 +1,88 @@
 <div class="invoice-container">
-  <div class="invoice-header">
-    <div class="title-date">
-      <h2 class="title">FACTURE</h2>
-      <p class="date">{{ facture.dateFacture }}</p>
-    </div>
-    <div class="space"></div>
-    <p class="invoice-number">#{{ facture.id }}</p>
-  </div>
-  <div class="invoice-body">
-    <p>{{ facture.description}}</p>
-    <table class="my-10">
-      <thead>
-      <th style="padding-left:12px;">PRODUCT</th>
-      <th>UNIT</th>
-      <th>PRICE</th>
-      <th>AMOUNT</th>
-      <th style="text-align: right;">ACTION</th>
-      </thead>
+	<div class="invoice-header">
+		<div class="title-date">
+			<h2 class="title">FACTURE</h2>
+			<p class="date">
+				{{ facture.dateFacture[0] }}-{{ facture.dateFacture[1] }}-{{
+					facture.dateFacture[2]
+				}}
+			</p>
+		</div>
+		<div class="space"></div>
+		<p class="invoice-number">#{{ facture.id }}</p>
+	</div>
+	<div class="invoice-body">
+		<p>{{ facture.description }}</p>
+		<table class="my-10">
+			<thead>
+				<th style="padding-left: 12px">PRODUCT</th>
+				<th>UNIT</th>
+				<th>PRICE</th>
+				<th>AMOUNT</th>
+				<th style="text-align: right">ACTION</th>
+			</thead>
 
-      <tbody id="table-body">
-      <tr class="single-row">
-        <td><input type="text" placeholder="Product name" class="product left"></td>
-        <td><input type="number" placeholder="0" name="unit" class="unit" id="unit"></td>
-        <td><input type="number" placeholder="0" name="price" class="price" id="price"></td>
-        <td><input type="number" placeholder="0" name="amount" class="amount" id="amount" disabled></td>
-        <td style="text-align: right;">
-          <button class="btn btn-error w-10 h-10">
-            <span class="material-symbols-outlined">delete</span>
-          </button>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-    <div id="sum">
-      <input
-        type="text"
-        placeholder="{{ facture.montant.toFixed(4) }} TND"
-        name="total"
-        class="total"
-        id="total"
-        disabled
-      >
-    </div>
+			<tbody id="table-body">
+				<tr class="single-row">
+					<td>
+						<input
+							type="text"
+							placeholder="Product name"
+							class="product left"
+						/>
+					</td>
+					<td>
+						<input
+							type="number"
+							placeholder="0"
+							name="unit"
+							class="unit"
+							id="unit"
+						/>
+					</td>
+					<td>
+						<input
+							type="number"
+							placeholder="0"
+							name="price"
+							class="price"
+							id="price"
+						/>
+					</td>
+					<td>
+						<input
+							type="number"
+							placeholder="0"
+							name="amount"
+							class="amount"
+							id="amount"
+							disabled
+						/>
+					</td>
+					<td style="text-align: right">
+						<button class="btn btn-error w-10 h-10">
+							<span class="material-symbols-outlined">delete</span>
+						</button>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<div id="sum">
+			<input
+				type="text"
+				placeholder="{{ facture.montant.toFixed(4) }} TND"
+				name="total"
+				class="total"
+				id="total"
+				disabled
+			/>
+		</div>
 
-    <div class="flex jusitfy-evenly">
-      <button class="btn btn-primary text-white" (click)="onOpenDialog()">
-        Envoyer mail de paiement
-        <span class="material-symbols-outlined">mail</span>
-      </button>
-    </div>
-
-  </div>
+		<div class="flex jusitfy-evenly">
+			<button class="btn btn-primary text-white" (click)="onOpenDialog()">
+				Envoyer mail de paiement
+				<span class="material-symbols-outlined">mail</span>
+			</button>
+		</div>
+	</div>
 </div>
