--- a/src/app/pages/facture/facture.page.html
+++ b/src/app/pages/facture/facture.page.html
@@ -1,30 +1,37 @@
 <div class="hero h-[125] bg-base-200">
-  <div class="hero-content text-center flex items-center justify-center">
+	<div class="hero-content text-center flex items-center justify-center">
 		<span
-      (click)="navigateBack()"
-      class="material-symbols-outlined absolute left-4 class btn btn-error text-2xl text-white hover:bg-error-content/90"
-    >arrow_back</span
-    >
-    <div class="max-w-md mx-auto">
-      <h1 class="text-5xl font-bold">Liste des factures de client:</h1>
-    </div>
-  </div>
+			(click)="navigateBack()"
+			class="material-symbols-outlined absolute left-4 class btn btn-error text-2xl text-white hover:bg-error-content/90"
+			>arrow_back</span
+		>
+		<div class="max-w-md mx-auto">
+			<h1 class="text-5xl font-bold">Liste des factures de client:</h1>
+		</div>
+
+		<button
+			class="btn btn-error text-white absolute right-4"
+			(click)="logout()"
+		>
+			Logout
+		</button>
+	</div>
 </div>
 
 <div class="flex items-center justify-center min-h-screen">
-  <app-send-email-dialog
-    *ngIf="isDialogToggled"
-    (close)="handleDialog()"
-    [facture]="selectedFacture!"
-  />
+	<app-send-email-dialog
+		*ngIf="isDialogToggled"
+		(close)="handleDialog()"
+		[facture]="selectedFacture!"
+	/>
 
-  <ng-container *ngIf="factureService.factureData$ | async as factureState">
-    <div class="flex flex-wrap items-center justify-center h-screen space-x-4">
-      <app-facture-card
-        *ngFor="let facture of factureState.appData?.data?.['factures']"
-        [facture]="facture"
-        (openDialog)="handleDialog(facture)"
-      />
-    </div>
-  </ng-container>
+	<ng-container *ngIf="factureService.factureData$ | async as factureState">
+		<div class="flex flex-wrap items-center justify-center h-screen space-x-4">
+			<app-facture-card
+				*ngFor="let facture of factureState.appData?.data?.['factures']"
+				[facture]="facture"
+				(openDialog)="handleDialog(facture)"
+			/>
+		</div>
+	</ng-container>
 </div>
