--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,14 +1,20 @@
 <div class="hero h-[125] bg-base-200">
-  <div class="hero-content text-center">
-    <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Liste des clients</h1>
-    </div>
-  </div>
+	<div class="hero-content text-center">
+		<div class="max-w-md">
+			<h1 class="text-5xl font-bold">Liste des clients</h1>
+		</div>
+		<div class="max-w-md">
+			<h1 class="text-5xl font-bold">Liste des clients</h1>
+		</div>
+		<button class="btn btn-error text-white absolute right-4" (click)="logout()">Logout</button>
+	</div>
 </div>
 
-
 <ng-container *ngIf="clientsState$ | async as clientState">
-  <div class="flex flex-wrap items-center justify-center space-x-4 space-y-4">
-    <app-client-card *ngFor="let client of clientState.appData?.data?.['clients']" [client]="client" />
-  </div>
+	<div class="flex flex-wrap items-center justify-center space-x-4 space-y-4">
+		<app-client-card
+			*ngFor="let client of clientState.appData?.data?.['clients']"
+			[client]="client"
+		/>
+	</div>
 </ng-container>
