--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,19 +1,28 @@
 <div class="hero h-[125] bg-base-200">
 	<div class="hero-content text-center">
-		<div class="max-w-md">
+		<div class="max-w-md flex flex-col space-y-4">
 			<h1 class="text-5xl font-bold">Liste des clients</h1>
+			<input
+				type="text"
+				class="border border-gray-300 rounded-md px-4 py-2"
+				placeholder="Chercher clients..."
+				[(ngModel)]="searchTerm"
+				(keyup)="search()"
+			/>
 		</div>
-		<div class="max-w-md">
-			<h1 class="text-5xl font-bold">Liste des clients</h1>
-		</div>
-		<button class="btn btn-error text-white absolute right-4" (click)="logout()">Logout</button>
+		<button
+			class="btn btn-error text-white absolute right-4"
+			(click)="logout()"
+		>
+			Logout
+		</button>
 	</div>
 </div>
 
 <ng-container *ngIf="clientsState$ | async as clientState">
 	<div class="flex flex-wrap items-center justify-center space-x-4 space-y-4">
 		<app-client-card
-			*ngFor="let client of clientState.appData?.data?.['clients']"
+			*ngFor="let client of clientState.appData"
 			[client]="client"
 		/>
 	</div>
