--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -20,14 +20,6 @@
 			>
 				Filter
 			</button>
-<!-- 
-			<select
-        class="ml-4 btn-primary text-white px-4 py-2 rounded"
-      >
-        <option selected>TEST DEFAULT OPTION</option>
-        <option value="SERVER_UP">TEST OPTION 1</option>
-        <option value="SERVER_DOWN">TEST OPTION 2</option>
-      </select> -->
 
 			<div class="flex items-center">
 				<div class="relative">
@@ -58,4 +50,11 @@
 			</div>
 		</div>
 	</app-client-table>
+</ng-container>
+
+<ng-container *ngIf="showFilterOptions">
+	<app-filter-clients-dialog
+		(close)="toggleFilterOptions()"
+		(filterClients)="filterClients($event)"
+	></app-filter-clients-dialog>
 </ng-container>
