--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,7 +5,7 @@
 			class="btn btn-error text-white absolute right-4"
 			(click)="logout()"
 		>
-			Logout
+			Déconnexion
 		</button>
 	</div>
 </div>
@@ -25,8 +25,8 @@
 				<div class="relative">
 					<input
 						type="text"
-						class="px-3 py-2 pr-10 rounded border"
-						placeholder="Chercher par nom..."
+						class="px-3 py-2 pr-10 rounded border w-[300px]"
+						placeholder="Chercher par nom ou email..."
 						[(ngModel)]="searchTerm"
 						(keyup)="search()"
 					/>
@@ -56,5 +56,5 @@
 	<app-filter-clients-dialog
 		(close)="toggleFilterOptions()"
 		(filterClients)="filterClients($event)"
-	></app-filter-clients-dialog>
+	/>
 </ng-container>
