--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <div class="w=[1000px] flex flex-col items-center justify-center h-screen">
 	<h1 class="text-3xl font-bold mb-6">Login</h1>
 	<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-		<div class="mb-4">
+		<div class="mb-4 w-[400px]">
 			<label for="email" class="block text-gray-700 text-sm font-bold mb-2"
 				>Email</label
 			>
@@ -49,7 +49,7 @@
 		</div>
 		<button
 			type="submit"
-			class="w-full bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600"
+			class="w-full bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 {{ loginForm.invalid ? 'cursor-not-allowed' : '' }}"
 			[disabled]="loginForm.invalid"
 		>
 			Login
