--- a/src/app/modules/facture/components/facture-table/facture-table.component.html
+++ b/src/app/modules/facture/components/facture-table/facture-table.component.html
@@ -7,8 +7,12 @@
 	>
 		<thead class="bg-gray-50">
 			<tr>
-				<ng-container *ngFor="let column of tableColumns">
-					<th class="py-3 px-2 text-left font-semibold border-r border-b text-sm">
+				<ng-container
+					*ngFor="let column of tableColumns; trackBy: trackByFnColumn"
+				>
+					<th
+						class="py-3 px-2 text-left font-semibold border-r border-b text-sm"
+					>
 						<div class="flex flex-row items-center">
 							<span class="material-symbols-outlined">{{ column.icon }}</span>
 							{{ column.name }}
@@ -18,7 +22,7 @@
 			</tr>
 		</thead>
 		<tbody class="bg-white divide-y divide-gray-200">
-			<tr *ngFor="let facture of factures">
+			<tr *ngFor="let facture of factures; trackBy: trackByFnFacture">
 				<td class="py-3 px-4 border-r">#{{ facture.id }}</td>
 				<td class="py-3 px-4 border-r">
 					{{ facture.client.nom }} {{ facture.client.prenom }}
