--- a/src/app/modules/facture/components/facture-table/facture-table.component.html
+++ b/src/app/modules/facture/components/facture-table/facture-table.component.html
@@ -31,18 +31,18 @@
 					{{ facture.montant | currency : "TND" }}
 				</td>
 				<td class="py-3 px-4 border-r">
-					{{ facture.dateFacture[0] }}/{{ facture.dateFacture[1] }}/{{
-						facture.dateFacture[2]
-					}}
+					{{ facture.dateFacture }}
 				</td>
 				<td class="py-3 px-4 border-r">
-					{{ facture.dateEcheance[0] }}/{{ facture.dateEcheance[1] }}/{{
-						facture.dateEcheance[2]
-					}}
+					{{ facture.dateEcheance }}
 				</td>
 				<td class="py-3 px-4 border-r">{{ facture.description }}</td>
+				<td class="py-3 px-4 border-r capitalize">
+					{{ facture.factureStatus.toLowerCase() }}
+				</td>
 
 				<td
+					*ngIf="facture.factureStatus === 'IMPAYEE'"
 					class="btn btn-primary py-3 px-4 border-r text-white"
 					(click)="onOpenDialog(facture)"
 				>
@@ -53,6 +53,6 @@
 	</table>
 
 	<ng-template #noFacturesTemplate>
-		<p class="text-6xl">Ce client n'as aucune facture!</p>
+		<p class="text-6xl">Il n'ya aucune facture!</p>
 	</ng-template>
 </div>
