--- a/src/app/modules/facture/pages/facture/facture.page.html
+++ b/src/app/modules/facture/pages/facture/facture.page.html
@@ -24,9 +24,22 @@
 	[facture]="selectedFacture!"
 />
 
+<app-filter-facture-dialog
+	*ngIf="isFilterFactureDialogToggled"
+	(close)="handleFilterFactureDialog()"
+/>
+
 <ng-container *ngIf="factureService.factureData$ | async as factureState">
 	<app-facture-table
 		[factures]="factureState.appData?.data?.['factures']!"
 		(openDialog)="handleDialog($event)"
-	/>
+	>
+		<button
+			*ngIf="factureState.appData?.data?.['factures']?.length"
+			class="m-4 btn-primary text-white px-4 py-2 rounded"
+			(click)="handleFilterFactureDialog()"
+		>
+			Filter
+		</button>
+	</app-facture-table>
 </ng-container>
