--- a/src/app/modules/clients/components/client-table/client-table.component.html
+++ b/src/app/modules/clients/components/client-table/client-table.component.html
@@ -22,7 +22,8 @@
 			<tr
 				*ngFor="
 					let client of clients
-						| paginate : { itemsPerPage: calculateItemsPerPage(), currentPage: p };
+						| paginate
+							: { itemsPerPage: calculateItemsPerPage(), currentPage: p };
 					trackBy: trackByFnClient
 				"
 			>
