added facture statistics and statistics routing

--- a/src/app/core/pages/home/home.page.html
+++ b/src/app/core/pages/home/home.page.html
@@ -1,5 +1,12 @@
 <div class="hero h-[125] bg-base-200">
 	<div class="hero-content text-center">
+		<button
+			class="btn btn-primary text-white absolute left-4"
+			(click)="navigateToStatistics()"
+		>
+			Voir Statistics
+		</button>
+
 		<h1 class="text-5xl font-bold">Liste des clients</h1>
 		<button
 			class="btn btn-error text-white absolute right-4"
