--- a/src/app/modules/statistics/pages/statistics.page.html
+++ b/src/app/modules/statistics/pages/statistics.page.html
@@ -1,4 +1,17 @@
-<div class="flex flex-col space-y-4" *ngIf="statistics$ | async">
+<div class="hero h-[125] bg-base-200 mb-6">
+	<div class="hero-content text-center">
+		<button
+			class="btn btn-error text-white absolute left-4 hover:bg-error-content/90"
+			(click)="navigateBack()"
+		>
+			<span class="material-symbols-outlined text-white">arrow_back</span>
+		</button>
+
+		<h1 class="text-5xl font-bold">Statistics</h1>
+	</div>
+</div>
+
+<div class="flex flex-col space-y-8" *ngIf="statistics$ | async">
 	<canvas
 		baseChart
 		[data]="clientTypeData!"
@@ -11,6 +24,16 @@
 	<canvas
 		baseChart
 		[data]="cycleFacturationData!"
+		[options]="barChartOptions"
+		[plugins]="barChartPlugins"
+		[legend]="barChartLegend"
+		[type]="'bar'"
+	>
+	</canvas>
+
+	<canvas
+		baseChart
+		[data]="factureData!"
 		[options]="barChartOptions"
 		[plugins]="barChartPlugins"
 		[legend]="barChartLegend"
